NL translation update, thanks Frenske

--- a/po/nl.po
+++ b/po/nl.po
@@ -154,11 +154,11 @@ msgstr "%.0f kB"
 
 #, python-format
 msgid "%.1f°E"
-msgstr ""
+msgstr "%.1f°O"
 
 #, python-format
 msgid "%.1f°W"
-msgstr ""
+msgstr "%.1f°W"
 
 #, python-format
 msgid "%.2f GB"
@@ -631,7 +631,7 @@ msgid ""
 "receiver to standby. Do that now?"
 msgstr ""
 "Een opname die gereed is wil de ontvanger\n"
-"in standby zetten. Akkoord?"
+"in  zetten. Akkoord?"
 
 msgid ""
 "A finished record timer wants to shut down\n"
@@ -688,7 +688,7 @@ msgid ""
 "receiver to standby. Do that now?"
 msgstr ""
 "Een slaaptimer wil de ontvanger\n"
-"in standby zetten. Akkoord?"
+"in  zetten. Akkoord?"
 
 msgid ""
 "A sleep timer wants to shut down\n"
@@ -945,16 +945,16 @@ msgid "Alpha"
 msgstr "Transparantie"
 
 msgid "Also import at reboot/restart enigma2"
-msgstr "Importeer ook na een reboot/herstart van enigma2"
+msgstr "Importeer ook bij een herstart van de ontvanger of Enigma"
 
 msgid "Also import from the extension menu"
 msgstr "Maak de import ook mogelijk via het applicatie-menu"
 
 msgid "Also import when box is leaving standby"
-msgstr "Importeer ook indien de box vanuit standby opstart"
+msgstr "Importeer ook indien de ontvanger vanuit stand-by opstart"
 
 msgid "Also on standby"
-msgstr "Tevens bij standby"
+msgstr "Tevens bij stand-by"
 
 msgid "Alternative"
 msgstr "Alternatieven"
@@ -1005,7 +1005,7 @@ msgid "An unknown error occurred!"
 msgstr "Er heeft zich een onbekende fout voorgedaan!"
 
 msgid "And will put your receiver in standby over "
-msgstr "En zet je ontvanger in standby na "
+msgstr "En zet je ontvanger in stand-by na "
 
 msgid "Andorra"
 msgstr "Andorra"
@@ -2055,7 +2055,7 @@ msgstr ""
 "U kunt hier een waarde kiezen van 1- 5 mm. De standaardwaarde is 3 mm."
 
 msgid "Configure the brightness level of the front panel display during standby."
-msgstr "Met deze optie stelt u traploos de helderheid van het display in tijdens standby."
+msgstr "Met deze optie stelt u traploos de helderheid van het display in tijdens ."
 
 msgid "Configure the brightness level of the front panel display."
 msgstr "Met deze optie stelt u traploos de helderheid van het display in."
@@ -2079,7 +2079,7 @@ msgid "Configure the cursor behaviour in the channel selection list. When openin
 msgstr "Met deze optie stelt u het gedrag van de cursor in de zenderlijst in. U kunt na drukken van pijl up/down op de huidige zender blijven of alvast een volgende/vorige zender kiezen. Ook kunt en het gedrag van de B+/B- toetsen omkeren."
 
 msgid "Configure the duration in hours the receiver should go to standby when the receiver is not controlled."
-msgstr "Stel de tijdsduur (in uren en lopende activiteit) in waarna de STB wordt afgesloten of naar standby gaat, indien de ontvanger niet wordt bediend."
+msgstr "Stel de tijdsduur (in uren en lopende activiteit) in waarna de STB wordt afgesloten of naar  gaat, indien de ontvanger niet wordt bediend."
 
 msgid "Configure the duration in minutes for the screensaver."
 msgstr ""
@@ -2091,7 +2091,7 @@ msgid "Configure the duration in minutes for the sleeptimer. Select this entry a
 msgstr "Stel de tijd in voor de sleeptimer. Selecteer deze invoer en druk op 'Ok' of de groene toets om de sleeptimer te starten/stoppen."
 
 msgid "Configure the duration when the receiver should go to shut down in case the receiver is in standby mode."
-msgstr "Configureer na hoeveel tijd de ontvanger volledig moet afsluiten in het geval dat deze in standby staat."
+msgstr "Configureer na hoeveel tijd de ontvanger volledig moet afsluiten in het geval dat deze in  staat."
 
 msgid "Configure the first audio language (highest priority)."
 msgstr "Stel de eerste audio taal in (hoogste prioriteit)."
@@ -2565,7 +2565,7 @@ msgid "Customize"
 msgstr "Diverse instellingen"
 
 msgid "Customize OpenWebIF settings for fallback tuner"
-msgstr "Pas de instellingen van de fallback tuner aan in de OpenWebif"
+msgstr "Pas de instellingen van de Fallback tuner aan in de OpenWebif"
 
 msgid "Customize channel list cursor behavior"
 msgstr "Pas het gedrag van de cursor aan"
@@ -2682,7 +2682,7 @@ msgid "Debug to file"
 msgstr "Debug naar bestand"
 
 msgid "Deep Standby LED"
-msgstr "Deep standby LED"
+msgstr "Deep  LED"
 
 msgid "Deep standby"
 msgstr "Volledig uitschakelen"
@@ -2835,7 +2835,7 @@ msgid "Details for plugin: "
 msgstr "Plugin details:"
 
 msgid "Detect next boxes before standby"
-msgstr "Detecteer andere hardware voordat de box naar standby gaat"
+msgstr "Detecteer andere hardware voordat de box naar  gaat"
 
 msgid "Detected HDD:"
 msgstr "Gedetecteerde harde schijf:"
@@ -3378,7 +3378,7 @@ msgid "End time to ignore inactivity sleeptimer"
 msgstr "Extra uitloop om de inactiviteit sleeptimer te negeren"
 
 msgid "End time to ignore shutdown in standby"
-msgstr "Eind tijd om in standby gaan te negeren"
+msgstr "Eind tijd om in  gaan te negeren"
 
 msgid "English"
 msgstr "Engels"
@@ -4206,7 +4206,7 @@ msgid "Haiti"
 msgstr "Haiti"
 
 msgid "Handle standby from TV"
-msgstr "Reageer als de TV naar standby gaat"
+msgstr "Reageer als de TV naar  gaat"
 
 msgid "Handle wakeup from TV"
 msgstr "Reageer als de TV aangezet wordt"
@@ -4440,24 +4440,23 @@ msgid "Image: "
 msgstr "Image: "
 
 msgid "Import channels and/or EPG from remote receiver URL also when the receiver is getting out of standby"
-msgstr "Indien geactiveerd, dan importeert u de zenders en/of de EPG vanaf de de externe ontvanger als de ontvanger uit standby komt?"
+msgstr "Indien geactiveerd, dan importeert u de zenders en/of de EPG vanaf de de externe ontvanger als de ontvanger uit  komt?"
 
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "Indien geactiveerd, dan importeert u de zenders en/of de EPG vanaf de de externe ontvanger als de ontvanger of enigma2 is herstart."
 
-#, fuzzy
 msgid "Import channels from remote receiver URL when receiver is booted"
 msgstr ""
-"Met deze optie geeft u aan wat u wilt importeren vanaf de externe ontvanger na een herstart.\n"
+"Indien geactiveerd, dan importeert u zenders van een externe ontvanger indien uw ontvanger opstart.\n"
 "\n"
-"U kunt kiezen uit niets, alléén de zenders, zenders + EPG of alléén de EPG."
+"Na activatie van deze functie kunt u nadere details instellen."
 
 #, python-format
 msgid "Import from fallback tuner failed, %s"
 msgstr "Import vanaf de Fallback tuner mislukt, %s"
 
 msgid "Import from remote receiver URL"
-msgstr "Importeer div. data vanaf een externe ontvanger"
+msgstr "Importeer data vanaf een externe ontvanger"
 
 msgid "Import remote receiver URL"
 msgstr "Locatie van de externe ontvanger"
@@ -5555,7 +5554,7 @@ msgid "No services/providers selected"
 msgstr "Geen zender/provider gekozen"
 
 msgid "No standby"
-msgstr "Geen standby"
+msgstr "Geen "
 
 msgid "No stream clients"
 msgstr "Er zijn geen streamende clients."
@@ -5675,7 +5674,7 @@ msgid "Not tested:"
 msgstr "Niet getest:"
 
 msgid "Note: when enabled, and you do want standby mode after wake up, set option 'Startup to Standby' as 'No, except Wakeup timer'."
-msgstr "Nota: indien ingeschakeld en u wilt vanuit 'wake up'naar standby, stelt u dan de optie 'opstarten naar standby' in op 'nee, uitgezonderd wakeup timer'."
+msgstr "Nota: indien ingeschakeld en u wilt vanuit 'wake up'naar , stelt u dan de optie 'opstarten naar ' in op 'nee, uitgezonderd wakeup timer'."
 
 msgid ""
 "Nothing to scan!\n"
@@ -6553,7 +6552,7 @@ msgid "Protect software update screen"
 msgstr "Beveilig het software update menu"
 
 msgid "Protect standby menu"
-msgstr "Beveilig standby menu"
+msgstr "Beveilig  menu"
 
 msgid "Protect timer menu"
 msgstr "Beveilig timer menu"
@@ -6568,10 +6567,10 @@ msgid "Puerto Rico"
 msgstr "Puerto Rico"
 
 msgid "Put TV in standby"
-msgstr "Zet de TV in standby"
+msgstr "Zet de TV in "
 
 msgid "Put receiver in standby"
-msgstr "Schakel de ontvanger naar standby"
+msgstr "Schakel de ontvanger naar "
 
 msgid "Python frontend for /tmp/mmi.socket"
 msgstr "Python frontend voor /tmp/mmi.socket"
@@ -6721,7 +6720,7 @@ msgid "Refusing to move to the same directory"
 msgstr "Verplaatsen naar dezelfde doelmap wordt niet geaccepteerd."
 
 msgid "Regard deep standby as standby"
-msgstr "Beschouw de diepe standby als normale standby"
+msgstr "Beschouw de diepe  als normale "
 
 msgid "Region"
 msgstr "Regio"
@@ -6815,7 +6814,7 @@ msgid "Repeat"
 msgstr "Herhaal"
 
 msgid "Repeat leave standby messages"
-msgstr "Herhaal 'blijf standby' voor andere hardware"
+msgstr "Herhaal 'blijf ' voor andere hardware"
 
 msgid "Repeat playlist"
 msgstr "Herhaal afspeellijst"
@@ -7774,13 +7773,13 @@ msgid "Set startup service"
 msgstr "Kies als opstartzender"
 
 msgid "Set the User ID of the OpenWebif from your fallback tuner"
-msgstr "Voer het gebruikers ID van de OpenWebif in vanaf uw fallback tuner."
+msgstr "Voer het gebruikers ID van de OpenWebif in vanaf uw Fallback tuner."
 
 msgid "Set the password of the OpenWebif from your fallback tuner"
-msgstr "Stel het wachtwoord van de OpenWebif in vanaf je fallback tuner"
+msgstr "Stel het wachtwoord van de OpenWebif in vanaf je Fallback tuner"
 
 msgid "Set the port of the OpenWebif from your fallback tuner"
-msgstr "Stel de poort van de OpenWebif in vanaf de fallback tuner."
+msgstr "Stel de poort van de OpenWebif in vanaf de Fallback tuner."
 
 msgid "Set the type of the progress indication in the channel selection screen."
 msgstr ""
@@ -7996,10 +7995,10 @@ msgid "Show notification when import channels and/or EPG from remote receiver UR
 msgstr "Indien geactiveerd, dan wordt er een melding weergegeven indien de import van zenders en/of EPG vanaf de externe ontvanger geslaagd is."
 
 msgid "Show notification when import channels was not successful"
-msgstr "Toon een melding indien de import is mislukt"
+msgstr "Toon een melding indien de import niet geslaagd is"
 
 msgid "Show notification when import channels was successful"
-msgstr "Toon een melding indien de import is gelukt"
+msgstr "Toon een melding indien de import geslaagd is"
 
 msgid "Show packages to be updated"
 msgstr "Toon de te updaten pakketten"
@@ -8092,7 +8091,7 @@ msgid "Shutdown"
 msgstr "Afsluiten"
 
 msgid "Shutdown when in Standby"
-msgstr "Sluit volledig af indien in standby"
+msgstr "Sluit volledig af indien in "
 
 msgid "Side by side"
 msgstr "Naast elkaar"
@@ -8356,7 +8355,7 @@ msgid "Specify if you want to set the blocktimes separately by weekday"
 msgstr "Specificeer hoe u de week-bloktijden per dag wilt instellen"
 
 msgid "Specify the end time to ignore the shutdown timer when the receiver is in standby mode"
-msgstr "Specificeer de eind tijd wanneer de uitschakeltimer genegeerd moet worden wanneer de ontvanger in standby is."
+msgstr "Specificeer de eind tijd wanneer de uitschakeltimer genegeerd moet worden wanneer de ontvanger in  is."
 
 msgid "Specify the end time until the inactivity sleeptimer should be ignored"
 msgstr "Selecteer het eind tijdstip vanaf wanneer de sleeptimer moet worden genegeerd"
@@ -8368,7 +8367,7 @@ msgid "Specify the extra start time when the inactivity sleeptimer should be ign
 msgstr "Bepaal het tijdstip vanaf welk moment de 'inactiviteitsleeptimer' genegeerd moet worden"
 
 msgid "Specify the start time to ignore the shutdown timer when the receiver is in standby mode"
-msgstr "Bepaal het tijdstip vanaf welk moment de uitschakeltimer genegeerd moet worden, wanneer de ontvanger in standby is."
+msgstr "Bepaal het tijdstip vanaf welk moment de uitschakeltimer genegeerd moet worden, wanneer de ontvanger in  is."
 
 msgid "Specify the start time when the inactivity sleeptimer should be ignored"
 msgstr "Bepaal het tijdstip vanaf welk moment de 'inactiviteitsleeptimer' genegeerd moet worden"
@@ -8377,7 +8376,7 @@ msgid "Specify timeframe to ignore inactivity sleeptimer"
 msgstr "Bepaal de periode waar de inactiviteitsleeptimer genegeerd wordt"
 
 msgid "Specify timeframe to ignore the shutdown in standby"
-msgstr "Bepaal de periode om 'naar standby' te gaan te negeren"
+msgstr "Bepaal de periode om 'naar ' te gaan te negeren"
 
 msgid "Split preview mode"
 msgstr "Splits preview-modus"
@@ -8398,27 +8397,27 @@ msgid "Standart list"
 msgstr "Standaard lijst"
 
 msgid "Standby"
-msgstr "Standby"
+msgstr "Stand-by"
 
 msgid "Standby / restart"
-msgstr "Standby / herstart"
+msgstr "Stand-by / herstart"
 
 msgid "Standby LED"
-msgstr "Standby LED"
+msgstr "Stand-by LED"
 
 msgid "Standby after current event"
-msgstr "Standby na de huidige actie"
+msgstr "Stand-by na de huidige actie"
 
 #, python-format
 msgid "Standby fan %d PWM"
-msgstr "Standby ventilator %d PWM"
+msgstr "Stand-by ventilator %d PWM"
 
 #, python-format
 msgid "Standby fan %d voltage"
-msgstr "Standby ventilator %d spanning"
+msgstr "Stand-by ventilator %d spanning"
 
 msgid "Standby in "
-msgstr "Standby na "
+msgstr "Stand-by na "
 
 msgid "Start directory"
 msgstr "Start map"
@@ -8448,7 +8447,7 @@ msgid "Start time to ignore inactivity sleeptimer"
 msgstr "Extra begintijd om de inactiviteits sleeptimer te negeren"
 
 msgid "Start time to ignore shutdown in standby"
-msgstr "Start tijd om in standby gaan te negeren"
+msgstr "Start tijd om in  gaan te negeren"
 
 msgid "Start timeshift"
 msgstr "Start de timeshift"
@@ -8461,12 +8460,12 @@ msgstr "Start op"
 
 msgid "Startup the set top box in standby"
 msgstr ""
-"Indien geactiveerd, dan zal de ontvanger direct na een herstart naar standby gaan.\n"
+"Indien geactiveerd, dan zal de ontvanger direct na een herstart naar  gaan.\n"
 "\n"
 "Enkel praktisch als er geregeld stroomuitval is en HDMI-CEC geactiveerd is omdat anders mogelijk beide apparaten 'aan' blijven zonder toezicht."
 
 msgid "Startup to Standby"
-msgstr "Opstarten en ga naar direct naar standby"
+msgstr "Opstarten en ga naar direct naar "
 
 msgid "Step east"
 msgstr "Stap > oost"
@@ -8766,7 +8765,7 @@ msgstr "T2MI RAW Modus"
 msgid "TRANSLATOR_INFO"
 msgstr ""
 "Deze vertaling wordt u aangeboden door het OpenPLi team.\n"
-"Deze laatste vertaling dateert van 28 oktober 2019.\n"
+"Deze laatste vertaling dateert van 10 November 2019.\n"
 "Voor aanvullingen en opmerkingen stuurt u een mail naar\n"
 "translators@openpli.org."
 
@@ -9535,10 +9534,10 @@ msgid "Turn on the power LED during deep standby."
 msgstr "Met deze optie bepaalt u of de power led brandt als de ontvanger stand-by staat."
 
 msgid "Turn on the power LED during standby."
-msgstr "Met deze optie bepaalt u of de power led brandt als de ontvanger standby staat."
+msgstr "Met deze optie bepaalt u of de power led brandt als de ontvanger  staat."
 
 msgid "Turn on the power LED."
-msgstr "Met deze optie schakelt u of de power led aan of uit indien de ontvanger in standby staat."
+msgstr "Met deze optie schakelt u of de power led aan of uit indien de ontvanger in  staat."
 
 msgid "Turning step size"
 msgstr "Stap voor stap draaien"
@@ -10075,13 +10074,13 @@ msgid "Wakeup"
 msgstr "Actief worden"
 
 msgid "Wakeup TV from standby"
-msgstr "Activeer de TV vanuit standby"
+msgstr "Activeer de TV vanuit "
 
 msgid "Wakeup receiver for start timer"
-msgstr "Haal de ontvanger uit standby om een timeropname te starten"
+msgstr "Haal de ontvanger uit  om een timeropname te starten"
 
 msgid "Wakeup receiver from standby"
-msgstr "Activeer de ontvanger vanuit standby"
+msgstr "Activeer de ontvanger vanuit "
 
 msgid "Wakeup signal from TV"
 msgstr "Activeer het signaal van TV met "
@@ -10202,7 +10201,7 @@ msgid "When enabled the left, right, CH+/-, B+/-, P+/- buttons will follow the '
 msgstr "Indien geactiveerd, dan werken de links, rechts, CH +/-, B +/-, P +/- toetsen in de 'neutrino stijl' in plaats van de 'enigma2 stijl'."
 
 msgid "When enabled the set top box is able to wakeup on LAN"
-msgstr "Indien geactiveerd, dan is de ontvanger in staat om gebruik te maken van de 'WOL functie'. Hiermee kunt u via het netwerk contact met de ontvanger maken, waarna deze zal opstarten vanuit 'deep standby'."
+msgstr "Indien geactiveerd, dan is de ontvanger in staat om gebruik te maken van de 'WOL functie'. Hiermee kunt u via het netwerk contact met de ontvanger maken, waarna deze zal opstarten vanuit 'deep '."
 
 msgid "When enabled the timer from the fallback tuner is imported"
 msgstr "Indien geactiveerd, dan wordt de timer van de Fallback tuner geimporteerd"
@@ -10214,10 +10213,10 @@ msgid "When enabled you can control the volume with the arrow buttons instead of
 msgstr "Indien geactiveerd, dan kunt u het volume bedienen met de pijltjestoetsen, i.p.v. dat u hiermee de zenderlijst opent."
 
 msgid "When enabled you can customize the OpenWebIf settings for the fallback tuner"
-msgstr "Indien geactiveerd, dan kunt u de Fallback instellingen in de Webinterface wijzigen."
+msgstr "Indien geactiveerd, dan kunt u de instellingen van de Fallback tuner aanpassen in de Webinterface."
 
 msgid "When enabled you can specify a timeframe to ignore the shutdown timer when the receiver is in standby mode"
-msgstr "Indien geactiveerd dan kan een tijdsruimte worden gespecificeerd waarbinnen de uitschakel timer wordt genegeerd wanneer de tuner al in standby is."
+msgstr "Indien geactiveerd dan kan een tijdsruimte worden gespecificeerd waarbinnen de uitschakel timer wordt genegeerd wanneer de tuner al in  is."
 
 msgid "When enabled you can specify a timeframe when the inactivity sleeptimer is ignored. Not the detection is disabled during this timeframe but the inactivity timeout is disabled"
 msgstr "U kunt een periode opgeven waarin de inactiviteits sleeptimer wordt genegeerd. De detectie wordt niet uitgeschakeld maar de inactiviteits timeout wordt uitgeschakeld."
@@ -10527,10 +10526,10 @@ msgid "Yes, delete this movie and return to movie list"
 msgstr "Ja, verwijder deze opname en keer terug naar het opnameoverzicht"
 
 msgid "Yes, only from deep standby"
-msgstr "Ja, enkel vanuit 'deep standby'"
+msgstr "Ja, enkel vanuit 'deep '"
 
 msgid "Yes, only from standby"
-msgstr "Ja, enkel vanuit standby"
+msgstr "Ja, enkel vanuit "
 
 msgid "Yes, returning to movie list"
 msgstr "Ja, terug naar de opname lijst"
@@ -10710,10 +10709,10 @@ msgid "Your receiver might be unusable now. Please consult the manual for furthe
 msgstr "Uw ontvanger kan nu onbruikbaar zijn. Leest u eerst de handleiding voor extra informatie voordat u de ontvanger herstart."
 
 msgid "Your receiver will got to stand by due to the sleeptimer."
-msgstr "Uw ontvanger wordt door de sleeptimer in standby geschakeld."
+msgstr "Uw ontvanger wordt door de sleeptimer in  geschakeld."
 
 msgid "Your receiver will got to standby due to inactivity."
-msgstr "Uw ontvanger wordt vanwege inactiviteit, naar standby geschakeld."
+msgstr "Uw ontvanger wordt vanwege inactiviteit, naar  geschakeld."
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "De ontvanger zal herstarten nadat u op Ok gedrukt heeft."
@@ -11232,7 +11231,7 @@ msgid "go to deep standby"
 msgstr "uitschakelen"
 
 msgid "go to standby"
-msgstr "standby"
+msgstr ""
 
 msgid "grab this frame as bitmap"
 msgstr "Maak van dit beeld een screenshot"
@@ -11484,10 +11483,10 @@ msgid "once"
 msgstr "éénmalig"
 
 msgid "only from deep standby"
-msgstr "enkel vanuit 'deep standby'"
+msgstr "enkel vanuit 'deep '"
 
 msgid "only from standby"
-msgstr "enkel vanuit 'standby'"
+msgstr "enkel vanuit ''"
 
 msgid "open nameserver configuration"
 msgstr "Open nameserver-configuratie"
@@ -11843,7 +11842,7 @@ msgid "untestable"
 msgstr "niet te testen"
 
 msgid "until standby/restart"
-msgstr "tot standby/herstart"
+msgstr "tot /herstart"
 
 msgid "user defined"
 msgstr "Door gebruiker bepaald"
