NL translation update, thanks Frenske

--- a/po/nl.po
+++ b/po/nl.po
@@ -631,7 +631,7 @@ msgid ""
 "receiver to standby. Do that now?"
 msgstr ""
 "Een opname die gereed is wil de ontvanger\n"
-"in  zetten. Akkoord?"
+"in stand-by zetten. Akkoord?"
 
 msgid ""
 "A finished record timer wants to shut down\n"
@@ -688,7 +688,7 @@ msgid ""
 "receiver to standby. Do that now?"
 msgstr ""
 "Een slaaptimer wil de ontvanger\n"
-"in  zetten. Akkoord?"
+"in stand-by zetten. Akkoord?"
 
 msgid ""
 "A sleep timer wants to shut down\n"
@@ -2079,7 +2079,7 @@ msgid "Configure the cursor behaviour in the channel selection list. When openin
 msgstr "Met deze optie stelt u het gedrag van de cursor in de zenderlijst in. U kunt na drukken van pijl up/down op de huidige zender blijven of alvast een volgende/vorige zender kiezen. Ook kunt en het gedrag van de B+/B- toetsen omkeren."
 
 msgid "Configure the duration in hours the receiver should go to standby when the receiver is not controlled."
-msgstr "Stel de tijdsduur (in uren en lopende activiteit) in waarna de STB wordt afgesloten of naar  gaat, indien de ontvanger niet wordt bediend."
+msgstr "Stel de tijdsduur (in uren en lopende activiteit) in waarna de STB wordt afgesloten of naar stand-by gaat, indien de ontvanger niet wordt bediend."
 
 msgid "Configure the duration in minutes for the screensaver."
 msgstr ""
@@ -2091,7 +2091,7 @@ msgid "Configure the duration in minutes for the sleeptimer. Select this entry a
 msgstr "Stel de tijd in voor de sleeptimer. Selecteer deze invoer en druk op 'Ok' of de groene toets om de sleeptimer te starten/stoppen."
 
 msgid "Configure the duration when the receiver should go to shut down in case the receiver is in standby mode."
-msgstr "Configureer na hoeveel tijd de ontvanger volledig moet afsluiten in het geval dat deze in  staat."
+msgstr "Configureer na hoeveel tijd de ontvanger volledig moet afsluiten in het geval dat deze in stand-by staat."
 
 msgid "Configure the first audio language (highest priority)."
 msgstr "Stel de eerste audio taal in (hoogste prioriteit)."
@@ -2682,7 +2682,7 @@ msgid "Debug to file"
 msgstr "Debug naar bestand"
 
 msgid "Deep Standby LED"
-msgstr "Deep  LED"
+msgstr "Deep stand-by LED"
 
 msgid "Deep standby"
 msgstr "Volledig uitschakelen"
@@ -2835,7 +2835,7 @@ msgid "Details for plugin: "
 msgstr "Plugin details:"
 
 msgid "Detect next boxes before standby"
-msgstr "Detecteer andere hardware voordat de box naar  gaat"
+msgstr "Detecteer andere hardware voordat de box naar stand-by gaat"
 
 msgid "Detected HDD:"
 msgstr "Gedetecteerde harde schijf:"
@@ -3378,7 +3378,7 @@ msgid "End time to ignore inactivity sleeptimer"
 msgstr "Extra uitloop om de inactiviteit sleeptimer te negeren"
 
 msgid "End time to ignore shutdown in standby"
-msgstr "Eind tijd om in  gaan te negeren"
+msgstr "Eind tijd om in stand-by gaan te negeren"
 
 msgid "English"
 msgstr "Engels"
@@ -4206,7 +4206,7 @@ msgid "Haiti"
 msgstr "Haiti"
 
 msgid "Handle standby from TV"
-msgstr "Reageer als de TV naar  gaat"
+msgstr "Reageer als de TV naar stand-by gaat"
 
 msgid "Handle wakeup from TV"
 msgstr "Reageer als de TV aangezet wordt"
@@ -4440,7 +4440,7 @@ msgid "Image: "
 msgstr "Image: "
 
 msgid "Import channels and/or EPG from remote receiver URL also when the receiver is getting out of standby"
-msgstr "Indien geactiveerd, dan importeert u de zenders en/of de EPG vanaf de de externe ontvanger als de ontvanger uit  komt?"
+msgstr "Indien geactiveerd, dan importeert u de zenders en/of de EPG vanaf de externe ontvanger als deze uit stand-by komt?"
 
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "Indien geactiveerd, dan importeert u de zenders en/of de EPG vanaf de de externe ontvanger als de ontvanger of enigma2 is herstart."
@@ -5554,7 +5554,7 @@ msgid "No services/providers selected"
 msgstr "Geen zender/provider gekozen"
 
 msgid "No standby"
-msgstr "Geen "
+msgstr "Geen stand-by"
 
 msgid "No stream clients"
 msgstr "Er zijn geen streamende clients."
@@ -5674,7 +5674,7 @@ msgid "Not tested:"
 msgstr "Niet getest:"
 
 msgid "Note: when enabled, and you do want standby mode after wake up, set option 'Startup to Standby' as 'No, except Wakeup timer'."
-msgstr "Nota: indien ingeschakeld en u wilt vanuit 'wake up'naar , stelt u dan de optie 'opstarten naar ' in op 'nee, uitgezonderd wakeup timer'."
+msgstr "Let op: Indien u deze optie activeert en u wilt de ontvanger vanuit 'ontwaken' in stand-by zetten, stelt u dan de optie 'opstarten naar stand-by' in op 'nee, uitgezonderd wakeup timer'."
 
 msgid ""
 "Nothing to scan!\n"
@@ -6552,7 +6552,7 @@ msgid "Protect software update screen"
 msgstr "Beveilig het software update menu"
 
 msgid "Protect standby menu"
-msgstr "Beveilig  menu"
+msgstr "Beveilig stand-by menu"
 
 msgid "Protect timer menu"
 msgstr "Beveilig timer menu"
@@ -6567,7 +6567,7 @@ msgid "Puerto Rico"
 msgstr "Puerto Rico"
 
 msgid "Put TV in standby"
-msgstr "Zet de TV in "
+msgstr "Zet de TV in stand-by"
 
 msgid "Put receiver in standby"
 msgstr "Schakel de ontvanger naar "
@@ -6720,7 +6720,7 @@ msgid "Refusing to move to the same directory"
 msgstr "Verplaatsen naar dezelfde doelmap wordt niet geaccepteerd."
 
 msgid "Regard deep standby as standby"
-msgstr "Beschouw de diepe  als normale "
+msgstr "Beschouw de diepe stand-by als normale stand-by"
 
 msgid "Region"
 msgstr "Regio"
@@ -6814,7 +6814,7 @@ msgid "Repeat"
 msgstr "Herhaal"
 
 msgid "Repeat leave standby messages"
-msgstr "Herhaal 'blijf ' voor andere hardware"
+msgstr "Herhaal 'blijf stand-by' voor andere hardware"
 
 msgid "Repeat playlist"
 msgstr "Herhaal afspeellijst"
@@ -8091,7 +8091,7 @@ msgid "Shutdown"
 msgstr "Afsluiten"
 
 msgid "Shutdown when in Standby"
-msgstr "Sluit volledig af indien in "
+msgstr "Sluit volledig af indien in stand-by"
 
 msgid "Side by side"
 msgstr "Naast elkaar"
@@ -8355,7 +8355,7 @@ msgid "Specify if you want to set the blocktimes separately by weekday"
 msgstr "Specificeer hoe u de week-bloktijden per dag wilt instellen"
 
 msgid "Specify the end time to ignore the shutdown timer when the receiver is in standby mode"
-msgstr "Specificeer de eind tijd wanneer de uitschakeltimer genegeerd moet worden wanneer de ontvanger in  is."
+msgstr "Specificeer de eind tijd wanneer de uitschakeltimer genegeerd moet worden wanneer de ontvanger in stand-by is."
 
 msgid "Specify the end time until the inactivity sleeptimer should be ignored"
 msgstr "Selecteer het eind tijdstip vanaf wanneer de sleeptimer moet worden genegeerd"
@@ -8367,7 +8367,7 @@ msgid "Specify the extra start time when the inactivity sleeptimer should be ign
 msgstr "Bepaal het tijdstip vanaf welk moment de 'inactiviteitsleeptimer' genegeerd moet worden"
 
 msgid "Specify the start time to ignore the shutdown timer when the receiver is in standby mode"
-msgstr "Bepaal het tijdstip vanaf welk moment de uitschakeltimer genegeerd moet worden, wanneer de ontvanger in  is."
+msgstr "Bepaal het tijdstip vanaf welk moment de uitschakeltimer genegeerd moet worden, wanneer de ontvanger in stand-by is."
 
 msgid "Specify the start time when the inactivity sleeptimer should be ignored"
 msgstr "Bepaal het tijdstip vanaf welk moment de 'inactiviteitsleeptimer' genegeerd moet worden"
@@ -8447,7 +8447,7 @@ msgid "Start time to ignore inactivity sleeptimer"
 msgstr "Extra begintijd om de inactiviteits sleeptimer te negeren"
 
 msgid "Start time to ignore shutdown in standby"
-msgstr "Start tijd om in  gaan te negeren"
+msgstr "Start tijd om in stand-by gaan te negeren"
 
 msgid "Start timeshift"
 msgstr "Start de timeshift"
@@ -8460,12 +8460,12 @@ msgstr "Start op"
 
 msgid "Startup the set top box in standby"
 msgstr ""
-"Indien geactiveerd, dan zal de ontvanger direct na een herstart naar  gaan.\n"
+"Indien geactiveerd, dan zal de ontvanger direct na een herstart naar stand-by gaan.\n"
 "\n"
-"Enkel praktisch als er geregeld stroomuitval is en HDMI-CEC geactiveerd is omdat anders mogelijk beide apparaten 'aan' blijven zonder toezicht."
+"Dit is enkel praktisch als er (geregeld) stroomuitval is en HDMI-CEC geactiveerd is, omdat anders mogelijk beide apparaten 'aan' blijven zonder toezicht."
 
 msgid "Startup to Standby"
-msgstr "Opstarten en ga naar direct naar "
+msgstr "Opstarten en ga naar direct naar stand-by"
 
 msgid "Step east"
 msgstr "Stap > oost"
@@ -8765,7 +8765,7 @@ msgstr "T2MI RAW Modus"
 msgid "TRANSLATOR_INFO"
 msgstr ""
 "Deze vertaling wordt u aangeboden door het OpenPLi team.\n"
-"Deze laatste vertaling dateert van 10 November 2019.\n"
+"Deze laatste vertaling dateert van 11 November 2019.\n"
 "Voor aanvullingen en opmerkingen stuurt u een mail naar\n"
 "translators@openpli.org."
 
@@ -9531,10 +9531,10 @@ msgid "Turks and Caicos Islands"
 msgstr "Turks- en Caicoseilanden"
 
 msgid "Turn on the power LED during deep standby."
-msgstr "Met deze optie bepaalt u of de power led brandt als de ontvanger stand-by staat."
+msgstr "Met deze optie bepaalt u of de power led brandt als de ontvanger in deep stand-by staat."
 
 msgid "Turn on the power LED during standby."
-msgstr "Met deze optie bepaalt u of de power led brandt als de ontvanger  staat."
+msgstr "Met deze optie bepaalt u of de power led brandt als de ontvanger stand-by staat."
 
 msgid "Turn on the power LED."
 msgstr "Met deze optie schakelt u of de power led aan of uit indien de ontvanger in  staat."
@@ -10074,13 +10074,13 @@ msgid "Wakeup"
 msgstr "Actief worden"
 
 msgid "Wakeup TV from standby"
-msgstr "Activeer de TV vanuit "
+msgstr "Activeer de TV vanuit stand-by"
 
 msgid "Wakeup receiver for start timer"
 msgstr "Haal de ontvanger uit  om een timeropname te starten"
 
 msgid "Wakeup receiver from standby"
-msgstr "Activeer de ontvanger vanuit "
+msgstr "Activeer de ontvanger vanuit stand-by"
 
 msgid "Wakeup signal from TV"
 msgstr "Activeer het signaal van TV met "
@@ -10216,7 +10216,7 @@ msgid "When enabled you can customize the OpenWebIf settings for the fallback tu
 msgstr "Indien geactiveerd, dan kunt u de instellingen van de Fallback tuner aanpassen in de Webinterface."
 
 msgid "When enabled you can specify a timeframe to ignore the shutdown timer when the receiver is in standby mode"
-msgstr "Indien geactiveerd dan kan een tijdsruimte worden gespecificeerd waarbinnen de uitschakel timer wordt genegeerd wanneer de tuner al in  is."
+msgstr "Indien geactiveerd dan kan een tijdsruimte worden gespecificeerd waarbinnen de uitschakel timer wordt genegeerd wanneer de ontvanger al in stand-by staat."
 
 msgid "When enabled you can specify a timeframe when the inactivity sleeptimer is ignored. Not the detection is disabled during this timeframe but the inactivity timeout is disabled"
 msgstr "U kunt een periode opgeven waarin de inactiviteits sleeptimer wordt genegeerd. De detectie wordt niet uitgeschakeld maar de inactiviteits timeout wordt uitgeschakeld."
@@ -10529,7 +10529,7 @@ msgid "Yes, only from deep standby"
 msgstr "Ja, enkel vanuit 'deep '"
 
 msgid "Yes, only from standby"
-msgstr "Ja, enkel vanuit "
+msgstr "Ja, enkel vanuit stand-by"
 
 msgid "Yes, returning to movie list"
 msgstr "Ja, terug naar de opname lijst"
@@ -10712,7 +10712,7 @@ msgid "Your receiver will got to stand by due to the sleeptimer."
 msgstr "Uw ontvanger wordt door de sleeptimer in  geschakeld."
 
 msgid "Your receiver will got to standby due to inactivity."
-msgstr "Uw ontvanger wordt vanwege inactiviteit, naar  geschakeld."
+msgstr "Uw ontvanger wordt vanwege inactiviteit, naar stand-by geschakeld."
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "De ontvanger zal herstarten nadat u op Ok gedrukt heeft."
@@ -11231,7 +11231,7 @@ msgid "go to deep standby"
 msgstr "uitschakelen"
 
 msgid "go to standby"
-msgstr ""
+msgstr "ga naar stand-by"
 
 msgid "grab this frame as bitmap"
 msgstr "Maak van dit beeld een screenshot"
@@ -11483,10 +11483,10 @@ msgid "once"
 msgstr "éénmalig"
 
 msgid "only from deep standby"
-msgstr "enkel vanuit 'deep '"
+msgstr "enkel vanuit 'deep stand-by '"
 
 msgid "only from standby"
-msgstr "enkel vanuit ''"
+msgstr "alléén vanuit stand-by"
 
 msgid "open nameserver configuration"
 msgstr "Open nameserver-configuratie"
@@ -11842,7 +11842,7 @@ msgid "untestable"
 msgstr "niet te testen"
 
 msgid "until standby/restart"
-msgstr "tot /herstart"
+msgstr "tot stand-by / herstart"
 
 msgid "user defined"
 msgstr "Door gebruiker bepaald"
